<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Senati</string>
    <string name="title_ejercicios">Ejercicios SENATI</string>
    <string name="btn_ejercicio_1">Ejercicio 1</string>
    <string name="btn_ejercicio_2">Ejercicio 2</string>
    <string name="btn_ejercicio_3">Ejercicio 3</string>
    <string name="btn_ejercicio_4">Ejercicio 4</string>
    <string name="btn_ejercicio_5">Ejercicio 5</string>
    <string name="author_name">Autor: JhanDev</string>
    <string name="titulo_ejercicio">Ejercicio Nº 1</string>
    <string name="problema_ejercicio">Aplicación que permita calcular la remuneración del empleado. Ingrese el básico, número de hijos y cargo: \nBonificaciónes: \n Si su cargo es obrero recibirá S/.100.00\n Si su cargo es empleado recibirá S/.120.00 \n Por cada hijo recibirá S/.41.00</string>
    <string name="solucion_texto">SOLUCIÓN:</string>
    <string name="hint_salario_basico">Ingrese salario básico</string>
    <string name="hint_numero_hijos">Ingrese número de hijos</string>
    <string name="checkbox_obrero">Obrero</string>
    <string name="checkbox_empleado">Empleado</string>
    <string name="checkbox_ejecutivo">Ejecutivo</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_regresar">Regresar</string>
    <string name="titulo_ejercicio_2">Ejercicio Nº 2</string>
    <string name="problema_ejercicio_2">Aplicacion que permite calcular la comision total de un vendedor dependiendo de su monto de ventas. \nComisiones: \n Menor a S/.10000.00 = 5% \n Entre S/.10000.00 y S/.50000.00 = 7.5% + S/.200.00 \n Mayor a S/.50000.00 = 9% + S/.300.00</string>
    <string name="hint_monto_ventas">Ingrese monto de ventas</string>
    <string name="titulo_ejercicio_3">Ejercicio Nº 3</string>
    <string name="problema_ejercicio_3">Aplicación que permita calcular el sueldo de un obrero. Ingrese el nombre del obrero, horas trabajadas y tipo de actividad: \nActividades: \n Pintado = S/.10.00 por hora \n Laqueado = S/.12.00 por hora \n Barnizado = S/.14.00 por hora \nJornada semanal = 40 horas.\nPor cada hora extra se le pagara 30%.</string>
    <string name="hint_nombre_obrero">Ingrese nombre del obrero</string>
    <string name="hint_horas_trabajadas">Ingrese horas trabajadas</string>
    <string name="checkbox_pintado">Pintado</string>
    <string name="checkbox_laqueado">Laqueado</string>
    <string name="checkbox_barnizado">Barnizado</string>
    <string name="titulo_ejercicio_4">Ejercicio Nº 4</string>
    <string name="problema_ejercicio_4">Aplicación que permita calcular el sueldo de un empleado. Ingrese el salario básico y el cargo. \nLeyenda:\n[B]Bonificación\n[A]Asignación\n[R]Refrigerio \nCargos: \nObrero = [B] S/.100; [A] S/.120. \nEmpleado = [B] S/.120; [A] S/.150 y [R] S/.200. \nEjecutivo = [B] S/.250; [R] S/.250 y [A] S/.500</string>
    <string-array name="marcas">
        <item>Nike</item>
        <item>Adidas</item>
        <item>Fila</item>
    </string-array>
    <string-array name="tallas">
        <item>38</item>
        <item>40</item>
        <item>42</item>
    </string-array>
    <string name="titulo_ejercicio_5">Ejercicio Nº 5</string>
    <string name="problema_ejercicio_5">Aplicación que permita calcular el precio de un calzado.\nPrecios: \nNike: \n(38 = S/.150.00) (40 = S/.160.00) (42 = S/.160.00) \nAdidas: \n(38 = S/.140.00) (40 = S/.150.00) (42 = S/.150.00) \nFila: \n(38 = S/. 80.00) (40 = S/. 85.00) (42 = S/. 90.00) \nDescuentos: \n(2 a 5) = 5% \n(6 a 10) = 8% \n(11 a 20) = 10% \n(Mas de 20) = 15%</string>
    <string name="hint_cantidad_pares">Ingrese cantidad de pares</string>
</resources>
