<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicios.Ejercicio03">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ejercicio_3"
        android:textSize="24sp"
        android:textColor="@color/color1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Problem -->
    <TextView
        android:id="@+id/tvProblema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/problema_ejercicio_3"
        android:textSize="16sp"
        android:textColor="@color/color1"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Texto SOLUCIÓN -->
    <TextView
        android:id="@+id/tvSolucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solucion_texto"
        android:textSize="20sp"
        android:textColor="@color/color1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvProblema"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <!-- Input for worker's name -->
    <EditText
        android:id="@+id/etNombreObrero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_obrero"
        app:layout_constraintTop_toBottomOf="@+id/tvSolucion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Input for hours worked -->
    <EditText
        android:id="@+id/etHorasTrabajadas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_horas_trabajadas"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etNombreObrero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- RadioGroup for activity type -->
    <RadioGroup
        android:id="@+id/rgTipoActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etHorasTrabajadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/rbPintado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_pintado"/>

        <RadioButton
            android:id="@+id/rbLaqueado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_laqueado"/>

        <RadioButton
            android:id="@+id/rbBarnizado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_barnizado"/>
    </RadioGroup>

    <!-- Button to calculate -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/rgTipoActividad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Button to return -->
    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>