<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicios.Ejercicio05">

  <!-- Título -->
  <TextView
      android:id="@+id/tvTitulo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/titulo_ejercicio_5"
      android:textSize="24sp"
      android:textColor="@color/color1"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:padding="16dp"/>

  <!-- Problema -->
  <TextView
      android:id="@+id/tvProblema"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/problema_ejercicio_5"
      android:textSize="16sp"
      android:textColor="@color/color1"
      app:layout_constraintTop_toBottomOf="@id/tvTitulo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:padding="16dp"/>

  <!-- Texto SOLUCIÓN -->
  <TextView
      android:id="@+id/tvSolucion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/solucion_texto"
      android:textSize="20sp"
      android:textColor="@color/color1"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toBottomOf="@id/tvProblema"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="16dp"/>

  <!-- Spinner para seleccionar la marca -->
  <Spinner
      android:id="@+id/spMarca"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:entries="@array/marcas"
      app:layout_constraintTop_toBottomOf="@id/tvSolucion"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>

  <!-- Spinner para seleccionar la talla -->
  <Spinner
      android:id="@+id/spTalla"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:entries="@array/tallas"
      app:layout_constraintTop_toBottomOf="@id/spMarca"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>

  <!-- Input para ingresar la cantidad de pares vendidos -->
  <EditText
      android:id="@+id/etCantidad"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_cantidad_pares"
      android:inputType="number"
      app:layout_constraintTop_toBottomOf="@id/spTalla"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>

  <!-- Botón para calcular la venta -->
  <Button
      android:id="@+id/btnCalcular"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_calcular"
      app:layout_constraintTop_toBottomOf="@id/etCantidad"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>

  <!-- Button to return -->
  <Button
      android:id="@+id/btnRegresar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_regresar"
      app:layout_constraintTop_toBottomOf="@id/btnCalcular"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
